--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,15 @@
     text-align: center;
     font-size: 24px;
     font-weight: bold;
+    position: relative;
+}
+.menu-button{
+    display: block;
+    position: absolute;
+    top:50%;
+    left: 10px;
+    transform: translateY(-50%);
+}
+.menu-button:hover{
+    cursor: pointer;
 }
