--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,13 @@
 }
 
 .side-nav{
-    list-style-type: none;
     width: 100px;
+    display: none;
 }
 
+.menu-list{
+    list-style-type: none;
+}
 .menu-item{
     padding: 10px;
     display: block;
